[wheel]
universal = 1

[metadata]
name = timevault
version = 0.0.1
summary = Timevault package
description-file =
    README.rst
author = Obulapathi N Challa
author-email = obulpathi@gmail.com
home-page = http://www.obulpathi.com/
classifier =
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    timevault

[entry_points]
console_scripts =
    timevaultd = timevault.bitcoinpy:run
    vaultminer = timevault.miner.miner:run

[nosetests]
where=tests
verbosity=2
