[wheel]
universal = 1

[metadata]
name = reversecoin
version = 0.0.1
summary = Reversecoin package
description-file =
    README.rst
author = Obulapathi N Challa
author-email = obulpathi@gmail.com
home-page = http://www.obulpathi.com/
classifier =
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    reversecoin

[entry_points]
console_scripts =
    reversecoind = reversecoin.reversecoin:run
    reversecoin-miner = reversecoin.miner.miner:run

[nosetests]
where=tests
verbosity=2
